<resources>
    <string name="app_name">MathSchool</string>
    <string name="Math">Math</string>
    <string name="School">School</string>
    <string name="Welcome">Welcome!</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword">Forgot password!</string>
    <string name="SignIn">SignIn</string>
    <string name="SignUp">SignUp</string>
    <string name="FirstName">First name</string>
    <string name="LastName">Last name</string>
    <string name="MaxNumbers">6 - 14 numbers</string>
    <string name="CreateAccount">Create account</string>
    <string name="ExempleEmail">exemple@email.com</string>

    <string name="todo">TODO</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>