<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUp">


    <View
        android:id="@+id/container_components2"
        style="@style/ContainerComponents2"
        android:layout_height="0dp"
        android:layout_marginTop="114dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        />

    <ImageView
        android:layout_width="88dp"
        android:layout_height="115dp"
        android:src="@drawable/logosignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="208dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="49dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/SignUp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="37sp"
        android:textStyle="bold"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toTopOf="@+id/container_components2" />

    <TextView
        android:id="@+id/edit_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/FirstName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="88dp"
        app:layout_constraintTop_toTopOf="@+id/container_components2" />


    <EditText
        android:id="@+id/edit_firstnameInputSignUp"
        style="@style/Edit_TextSignUp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_firstname"
         />

    <TextView
        android:id="@+id/edit_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/LastName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_firstnameInputSignUp"/>
    <EditText
        android:id="@+id/edit_lastnameInputSignUp"
        style="@style/Edit_TextSignUp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="35dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_lastname"
        />

    <TextView
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_lastnameInputSignUp" />

    <EditText
        android:id="@+id/edit_emailInputSignUp"
        style="@style/edit_inputEmailSignUp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        android:hint="@string/ExempleEmail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        />


    <TextView
        android:id="@+id/edit_PasswordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/Password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_emailInputSignUp"

        />

    <EditText
        android:id="@+id/edit_passwordInputSignUp"
        style="@style/edit_inputEmailSignUp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="112dp"
        android:layout_marginLeft="35dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_PasswordSignUp"
        android:drawableEnd="@drawable/ic_eye"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/MaxNumbers"
        android:textAlignment="center"
        android:textColor="@color/white"
         android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="23dp"
         android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/edit_emailInputSignUp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_createAccountSignup"
        style="@style/ButtonCreateAccount"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter_bold"
        android:onClick="validarCampos"
        android:text="@string/CreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_passwordInputSignUp" />



</androidx.constraintlayout.widget.ConstraintLayout>